todo-app/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    padding: 0.5%;
    font-family:Verdana, Arial;
    background-color:aliceblue;
}
h1, input, button, ul{
    margin: 0.5%;
}
ul{
    list-style-type: none;
    width: 100%;
    min-width: 250px;
    max-width: 25vw;
}
li{
    display: flex;
    justify-content: space-between;
    cursor: pointer;
}
li:hover{
    color:rebeccapurple;
}
li.completed span{
    color:green;
    text-decoration: line-through;
}
ul>p{
    color: gray;
    font-style: italic;
}

